// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculates recent cycles > recent cycles 1`] = `
[
  {
    "endActive": 2018-03-05T09:27:00.000Z,
    "endOccupied": 2018-03-05T10:00:00.000Z,
    "outlier": true,
    "parts": [
      {
        "oper": "LOAD",
        "part": "part3-1",
      },
      {
        "oper": "UNLOAD",
        "part": "part4-2",
      },
    ],
    "startTime": 2018-03-05T09:07:00.000Z,
    "station": "L/U #1",
  },
  {
    "endActive": 2018-03-05T08:47:00.000Z,
    "endOccupied": 2018-03-05T09:00:00.000Z,
    "outlier": false,
    "parts": [
      {
        "oper": "LOAD",
        "part": "part3-1",
      },
      {
        "oper": "UNLOAD",
        "part": "part4-2",
      },
    ],
    "startTime": 2018-03-05T08:27:00.000Z,
    "station": "L/U #2",
  },
  {
    "endActive": 2018-03-05T06:59:00.000Z,
    "endOccupied": 2018-03-05T07:00:00.000Z,
    "outlier": false,
    "parts": [
      {
        "oper": "abcd",
        "part": "part1-1",
      },
    ],
    "startTime": 2018-03-05T06:31:00.000Z,
    "station": "MC #1",
  },
  {
    "endActive": 2018-03-05T07:43:00.000Z,
    "endOccupied": 2018-03-05T08:00:00.000Z,
    "outlier": true,
    "parts": [
      {
        "oper": "abcd",
        "part": "part1-1",
      },
    ],
    "startTime": 2018-03-05T07:15:00.000Z,
    "station": "MC #1",
  },
]
`;

exports[`creates cycles clipboard table > cycle clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Inspection
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Target Min
        </th>
        <th>
          Median Elapsed Min
        </th>
        <th>
          Median Deviation
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 AM
        </td>
        <td>
          party-3
        </td>
        <td>
          L/U #1
        </td>
        <td>
          5629011361492965
        </td>
        <td>
          serialt
        </td>
        <td>
          workz
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:28 AM
        </td>
        <td>
          party-3
        </td>
        <td>
          MC #1
        </td>
        <td>
          5629011361492965
        </td>
        <td>
          serialt
        </td>
        <td>
          workz
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:38 AM
        </td>
        <td>
          party-3
        </td>
        <td>
          L/U #2
        </td>
        <td>
          5629011361492965
        </td>
        <td>
          serialt
        </td>
        <td>
          workz
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 PM
        </td>
        <td>
          partf-4
        </td>
        <td>
          L/U #1
        </td>
        <td>
          4688892583065219
        </td>
        <td>
          serialL
        </td>
        <td>
          worka
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 PM
        </td>
        <td>
          partf-4
        </td>
        <td>
          MC #1
        </td>
        <td>
          4688892583065219
        </td>
        <td>
          serialL
        </td>
        <td>
          worka
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 PM
        </td>
        <td>
          partf-4
        </td>
        <td>
          L/U #2
        </td>
        <td>
          4688892583065219
        </td>
        <td>
          serialL
        </td>
        <td>
          worka
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:05 AM
        </td>
        <td>
          partZ-0
        </td>
        <td>
          L/U #1
        </td>
        <td>
          6334762256135281
        </td>
        <td>
          serialC
        </td>
        <td>
          workT
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:43 AM
        </td>
        <td>
          partZ-0
        </td>
        <td>
          MC #1
        </td>
        <td>
          6334762256135281
        </td>
        <td>
          serialC
        </td>
        <td>
          workT
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:53 AM
        </td>
        <td>
          partZ-0
        </td>
        <td>
          L/U #2
        </td>
        <td>
          6334762256135281
        </td>
        <td>
          serialC
        </td>
        <td>
          workT
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`creates cycles clipboard table > cycle filtered clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Inspection
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Target Min
        </th>
        <th>
          Median Elapsed Min
        </th>
        <th>
          Median Deviation
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 PM
        </td>
        <td>
          partf-4
        </td>
        <td>
          L/U #1
        </td>
        <td>
          4688892583065219
        </td>
        <td>
          serialL
        </td>
        <td>
          worka
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 PM
        </td>
        <td>
          partf-4
        </td>
        <td>
          MC #1
        </td>
        <td>
          4688892583065219
        </td>
        <td>
          serialL
        </td>
        <td>
          worka
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 PM
        </td>
        <td>
          partf-4
        </td>
        <td>
          L/U #2
        </td>
        <td>
          4688892583065219
        </td>
        <td>
          serialL
        </td>
        <td>
          worka
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`creates log entries clipboard table > events clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Result
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Active Min
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 5, 2018, 12:05 AM
        </td>
        <td>
          partk-0
        </td>
        <td>
          L/U #1
        </td>
        <td>
          7104480587294849
        </td>
        <td>
          serialU
        </td>
        <td>
          workV
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:10 AM
        </td>
        <td>
          partk-0
        </td>
        <td>
          Stocker
        </td>
        <td>
          7104480587294849
        </td>
        <td>
          serialU
        </td>
        <td>
          workV
        </td>
        <td />
        <td>
          4.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:43 AM
        </td>
        <td>
          partk-0
        </td>
        <td>
          MC #1
        </td>
        <td>
          7104480587294849
        </td>
        <td>
          serialU
        </td>
        <td>
          workV
        </td>
        <td>
          progV
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:53 AM
        </td>
        <td>
          partk-0
        </td>
        <td>
          L/U #2
        </td>
        <td>
          7104480587294849
        </td>
        <td>
          serialU
        </td>
        <td>
          workV
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:58 AM
        </td>
        <td>
          partk-0
        </td>
        <td>
          Signal Insp1
        </td>
        <td>
          0
        </td>
        <td>
          serialU
        </td>
        <td>
          workV
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 1:05 AM
        </td>
        <td>
          partk-0
        </td>
        <td>
          Inspect Insp1
        </td>
        <td>
          0
        </td>
        <td>
          serialU
        </td>
        <td>
          workV
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 PM
        </td>
        <td>
          partz-0
        </td>
        <td>
          L/U #1
        </td>
        <td>
          2712104516263
        </td>
        <td>
          serialv
        </td>
        <td>
          work0
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:10 PM
        </td>
        <td>
          partz-0
        </td>
        <td>
          Stocker
        </td>
        <td>
          2712104516263
        </td>
        <td>
          serialv
        </td>
        <td>
          work0
        </td>
        <td />
        <td>
          4.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 PM
        </td>
        <td>
          partz-0
        </td>
        <td>
          MC #1
        </td>
        <td>
          2712104516263
        </td>
        <td>
          serialv
        </td>
        <td>
          work0
        </td>
        <td>
          progK
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 PM
        </td>
        <td>
          partz-0
        </td>
        <td>
          L/U #2
        </td>
        <td>
          2712104516263
        </td>
        <td>
          serialv
        </td>
        <td>
          work0
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:48 PM
        </td>
        <td>
          partz-0
        </td>
        <td>
          Signal Insp1
        </td>
        <td>
          0
        </td>
        <td>
          serialv
        </td>
        <td>
          work0
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:55 PM
        </td>
        <td>
          partz-0
        </td>
        <td>
          Inspect Insp1
        </td>
        <td>
          0
        </td>
        <td>
          serialv
        </td>
        <td>
          work0
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 AM
        </td>
        <td>
          partg-2
        </td>
        <td>
          L/U #1
        </td>
        <td>
          7983337404727063
        </td>
        <td>
          serialL
        </td>
        <td>
          workX
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:10 AM
        </td>
        <td>
          partg-2
        </td>
        <td>
          Stocker
        </td>
        <td>
          7983337404727063
        </td>
        <td>
          serialL
        </td>
        <td>
          workX
        </td>
        <td />
        <td>
          4.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:28 AM
        </td>
        <td>
          partg-2
        </td>
        <td>
          MC #1
        </td>
        <td>
          7983337404727063
        </td>
        <td>
          serialL
        </td>
        <td>
          workX
        </td>
        <td>
          progm
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:38 AM
        </td>
        <td>
          partg-2
        </td>
        <td>
          L/U #2
        </td>
        <td>
          7983337404727063
        </td>
        <td>
          serialL
        </td>
        <td>
          workX
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 AM
        </td>
        <td>
          partg-2
        </td>
        <td>
          Signal Insp1
        </td>
        <td>
          0
        </td>
        <td>
          serialL
        </td>
        <td>
          workX
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:50 AM
        </td>
        <td>
          partg-2
        </td>
        <td>
          Inspect Insp1
        </td>
        <td>
          0
        </td>
        <td>
          serialL
        </td>
        <td>
          workX
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;
